# input-attribution-icl

./: .gitignore  README.md  lm_saliency.py  pyproject.toml
icl_attribution/: __init__.py  cli.py  config.py  workflows.py
scripts/: run_evaluation.sh
tasks/add_or_multiply/100_shots/: generated_add_data.json  generated_multiply_data.json
tasks/add_or_multiply/10_shots/: generated_add_data.json  generated_multiply_data.json
tasks/add_or_multiply/50_shots/: generated_add_data.json  generated_multiply_data.json
tasks/associative_recall/100_shots/: generated_associative_recall_data.json
tasks/associative_recall/10_shots/: generated_associative_recall_data.json
tasks/associative_recall/50_shots/: generated_associative_recall_data.json
tasks/linear_or_distinct/100_shots/: generated_distinct_data.json  generated_linear_data.json
tasks/linear_or_distinct/10_shots/: generated_distinct_data.json  generated_linear_data.json
tasks/linear_or_distinct/50_shots/: generated_distinct_data.json  generated_linear_data.json
tasks/pos_title/100_shots/: generated_pos_data.json  generated_title_data.json
tasks/pos_title/10_shots/: generated_pos_data.json  generated_title_data.json
tasks/pos_title/50_shots/: generated_pos_data.json  generated_title_data.json
tasks/tense_article/100_shots/: generated_article_data.json  generated_tense_data.json
tasks/tense_article/10_shots/: generated_article_data.json  generated_tense_data.json
tasks/tense_article/50_shots/: generated_article_data.json  (+1 more)
utils/: __init__.py  attribution_utils.py  core.py  evaluation.py  model.py
(+6 files in other folders)
